fix: prøvd jlink og jpackage
Co-authored-by: Rockne <Rockne@users.noreply.github.com>
Co-authored-by: halsetonje <halsetonje@users.noreply.github.com>