@@ -16,16 +16,6 @@
             <artifactId>model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.16.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.htmlunit</groupId>
-            <artifactId>htmlunit</artifactId>
-            <version>4.4.0</version>
-        </dependency>
 
         <!-- javafx -->
         <dependency>
@@ -59,87 +49,12 @@
             <version>2.2</version>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
 
         <profiles>
-        <profile>
-            <id>fontawesome</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.openjfx</groupId>
-                        <artifactId>javafx-maven-plugin</artifactId>
-                        <version>0.0.6</version>
-                        <configuration>                    
-                            <mainClass>de.jensd.fx.glyphs.fontawesome.demo.FontAwesomeIconsDemoApp</mainClass>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>documentapp</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.openjfx</groupId>
-                        <artifactId>javafx-maven-plugin</artifactId>
-                        <version>0.0.6</version>
-                        <configuration>                    
-                            <mainClass>todolist.ui/todolist.ui.TodoDocumentApp</mainClass>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>remoteapp</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.openjfx</groupId>
-                        <artifactId>javafx-maven-plugin</artifactId>
-                        <version>0.0.6</version>
-                        <configuration>                    
-                            <mainClass>todolist.ui/todolist.ui.TodoRemoteApp</mainClass>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jpro</id>
-            <pluginRepositories>
-                <pluginRepository>
-                    <id>jpro - sandec repository</id>
-                    <url>https://sandec.bintray.com/repo</url>
-                </pluginRepository>
-            </pluginRepositories>
-            <repositories>
-                <repository>
-                    <id>jpro - sandec repository</id>
-                    <url>https://sandec.bintray.com/repo</url>
-                </repository>
-            </repositories>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.sandec.jpro</groupId>
-                        <artifactId>jpro-maven-plugin</artifactId>
-                        <version>2020.1.5</version>
-                        <configuration>
-                            <visible>false</visible>
-                            <JVMArgs>
-                                <!-- <JVMArg>your-args</JVMArg> -->
-                            </JVMArgs>
-                            <mainClassName>todolist.ui/todolist.ui.TodoApp</mainClassName>
-                            <openingPath>/</openingPath>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
+       
         <profile> <!-- headless profil for å kjøre pipeline!!-->
             <id>headless</id>
             <properties>
@@ -161,28 +76,21 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-        		<artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                    --add-opens view/view=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    @{jaCoCoArgLine}
-                    </argLine>
-                </configuration>
-	        </plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>17</source>
+                <target>17</target>
+            </configuration>
+        </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
-                <!-- Default configuration for running -->
-                <!-- Usage: mvn javafx:run -->
                 <configuration>
-                    <!-- syntax: module-name/full-app-class-name -->
-                    <mainClass>view/view.App</mainClass>
+                    <mainClass>view.App</mainClass>
+                    <argLine>--add-modules javafx.controls,javafx.fxml</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -194,6 +102,70 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <configuration>
                     <propertyName>jaCoCoArgLine</propertyName>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>org.jsoup:jsoup</include>
+                                </includes>
+                            </artifactSet>
+                            <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-all.jar</outputFile>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            
+
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>view.view.App</mainClass>
+                    <compress>2</compress>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <stripDebug>true</stripDebug>
+                    <noManPages>true</noManPages>
+                    <launcher>ryddeplanen</launcher>
+                    <jlinkImageName>ryddeplanen</jlinkImageName>
+                    <jlinkZipName>ryddeplanen</jlinkZipName>
+                </configuration>
+            </plugin>
+
+            <!-- config above and below taken from https://dev.to/cherrychain/javafx-jlink-and-jpackage-h9 -->
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                <configuration>
+                    <name>Ryddeplanen</name>
+                    <appVersion>1.0.0</appVersion>
+                    <vendor>gr36</vendor>
+                    <destination>target/dist</destination>
+                    <module>view</module>
+                    <modulePaths>
+                        <modulePath>target/classes</modulePath>
+                    </modulePaths>
+                    <mainClass>view.App</mainClass> <!-- Add the main class -->
+                    <javaOptions>
+                        <option>-Dfile.encoding=UTF-8</option>
+                    </javaOptions>
+                    <winDirChooser>true</winDirChooser>
+                    <winShortcut>true</winShortcut>
+                    <winMenu>true</winMenu>
+                    <winMenuGroup>Ryddeplanen</winMenuGroup>
                 </configuration>
             </plugin>
         </plugins>
